# quinn

./: .gitignore  ANTIPATTERNS.md  CLAUDE.md  Makefile  PLAN.md  Python.md  README.md  TODO.md  example_prompt.j2  pyproject.toml  quinn.db  sitecustomize.py
.claude/: settings.local.json
docs/: MEMORY.md  METHODOLOGY.md  PLAN.md  RULES.md
llms/: fasthtml.txt  plotly.txt  postmark.txt  streamlit.txt
quinn/: __init__.py  __main__.py  cli.py  cli_test.py  web.py  web_main.py
quinn/agent/: __init__.py  cache.py  cache_test.py  core.py  core_test.py  cost.py  cost_test.py  metrics.py  metrics_test.py  retry.py  retry_test.py  templates.py  templates_test.py  validation.py  validation_test.py  versioning.py  versioning_test.py
quinn/agent/pricing/: anthropic.json  google.json  (+1 more)
quinn/core/: __init__.py  conversation_manager.py  database_manager.py
quinn/db/: conftest.py  conversations.py  conversations_test.py  database.py  database_test.py  emails.py  emails_test.py  messages.py  messages_test.py  schema.sql  users.py  users_test.py
quinn/email/: __init__.py  inbound.py  inbound_test.py  outbound.py  outbound_test.py  security.py  security_test.py  web.py  web_test.py
quinn/models/: __init__.py  config.py  config_test.py  conversation.py  conversation_test.py  email.py  integration_test.py  message.py  message_test.py  models_test.py  prompt.py  prompt_test.py  response.py  response_test.py  types.py  types_test.py  user.py
quinn/utils/: logging.py  logging_test.py
tests/: conftest.py
tests/db/: test_db.py
tests/e2e/: conftest.py
tests/integration/: conftest.py
tools/: code_smell.md  refresh_llm_pricing.md  refresh_llms_txt.md
(+4 files in other folders)
