[project]
dependencies = [
    "pydantic-ai[anthropic,openai]>=0.0.14",
    "fasthtml>=0.7.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "toml>=0.10.0",
    "loguru>=0.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "ty>=0.9.0",
    "hyperfine>=1.18.0",
]